--- a/tuw_geo_map/package.xml
+++ b/tuw_geo_map/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>tuw_geo</name>
+  <name>tuw_geo_map</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
