geo_objects added as empyt node

--- a/tuw_geo_map/CMakeLists.txt
+++ b/tuw_geo_map/CMakeLists.txt
@@ -49,6 +49,13 @@ ament_target_dependencies(
   "OpenCV"
 )
 
+
+install(DIRECTORY
+    launch
+    config
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 install(TARGETS 
   geo_map_node
   geo_map
