--- a/tuw_geo_objects/CMakeLists.txt
+++ b/tuw_geo_objects/CMakeLists.txt
@@ -15,6 +15,13 @@ find_package(nav_msgs REQUIRED)
 find_package(tuw_geometry REQUIRED)
 find_package(OpenCV REQUIRED)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "/usr/share/cmake/geographiclib/")
+find_package(GeographicLib QUIET)
+if(GeographicLib_FOUND)
+  message(STATUS "GeographicLib found: building geo_map!")
+else()
+  message(ERROR "GeographicLib NOT found: not building geo_map!")
+endif()
 
 add_library(geo_objects src/geo_objects_node.cpp)
 target_compile_features(geo_objects PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
