--- a/tuw_geo_objects/package.xml
+++ b/tuw_geo_objects/package.xml
@@ -17,6 +17,7 @@
   <depend>nav_msgs</depend>
   <depend>tuw_geometry</depend>
   <depend>OpenCV</depend>
+  <depend>geographiclib</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
