--- a/tuw_geo_map/package.xml
+++ b/tuw_geo_map/package.xml
@@ -16,7 +16,7 @@
   <depend>tf2_ros</depend>
   <depend>nav_msgs</depend>
   <depend>tuw_geometry</depend>
-  <depend>OpenCV</depend>
+  <depend>libopencv-dev</depend>
   <depend>geographiclib</depend>
 
   <test_depend>ament_lint_auto</test_depend>
